--- a/example/example.html
+++ b/example/example.html
@@ -28,9 +28,9 @@
         <div class="item">2</div>
     </div>
 </div>
-<script src="./lib/zepto.min.js"></script>
-<script src="./lib/fx.js"></script>
-<script src="./faSwiper.js"></script>
+<script src="lib/zepto.min.js"></script>
+<script src="lib/fx.js"></script>
+<script src="faSwiper.js"></script>
 <script>
     var isData=true;
     var o = {
